# procesarea-imaginilor

lab1/: CMakeLists.txt  build_and_run.ps1  main.cpp
lab1/src/: lab1.cpp  lab1.h
lab2/: CMakeLists.txt  build_and_run.ps1  main.cpp
lab2/src/: lab2.cpp  lab2.h
